@@ -23,6 +23,7 @@ Updated by: FPtje Falco
 [ADD] /advert command: Say /advert <advertisement>  to advert!
 [ADD] Rp_BabyGod: Players are immortal when they've just spawned.
 [ADD] Rp_<job> for every job, not only cp, mayor and cpchief
+[ADD] Color codes when rp_alltalk = 0: People can see who can hear them whisper/talk normally/yell and who cannot hear them. 
 [CHANGE] All door controls are now done though reload with the Keys weapon.
 [CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
 [CHANGE] The way prop protection works for admins
